--- a/templats/adm/proAdd.html
+++ b/templats/adm/proAdd.html
@@ -482,6 +482,10 @@
 				stock: {
 					required: true,
 				},
+				offer:{
+					maxlength: 70,
+					minlength:1
+				},
 				discription: {
 					required: true,
 					minlength: 13
