--- a/templats/userst/search.html
+++ b/templats/userst/search.html
@@ -6,31 +6,41 @@
 <div class="container">
     <div class="row max-auto">
         {% if prodects %}
-            {% for prodect in prodects %}
-                    <div class="col-md-3 product-left p-3" style="margin-top: 3%;">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="{{ prodect.get_url }}" class="mask"><img class="img-responsive zoom-img"
-                                    style="height: 200px; width: 189px;" src="{{prodect.img1.url}}" alt="" /></a>
-                            <div class="product-bottom">
-                                <h3>{{prodect.brand}}</h3>
-                                <p>{{prodect.prodectname}}</p>
-                                <p>{{prodect.model_no}}</p>
-                                <h4> <span class=" item_price">₹{{prodect.price}}</span></h4>
-                                    {% if prodect.stock <= 0 %} 
-                                    <a class="btn btn-secondary text-red"><b style="color: red;">Out Of stock</b></a>
-                                    {% else %}
-                                    <a href="{% url 'add_cart' prodect.id %}" style="width: 87%; margin-bottom: 2%;"
-                                    class="btn btn-primary text-white"><b>Add to Cart</b></a>
-                                    <a href="{% url 'buy_now' prodect.id %}" class="btn " style="border-color: red; color: red; border-radius: 5px; width: 87%;"><b>Buy Now</b></a>
-
-                                    {% endif %}
-                            </div>
-                            <!-- <div class="srch">
-                                    <span>-50%</span>
-                                </div> -->
-                        </div>
+        {% for prodect in prodects %}
+        <div class="col-md-3 product-left p-3" style="margin-top: 3%;">
+            <div class="product-main">
+                <div style="display: flex; justify-content: end; margin-right: 1%;">
+                    <a href="{% url 'add_wish' prodect.id %}"><img src="https://img.icons8.com/material-outlined/24/fa314a/like.png"/></a>
+                </div>
+                <div class="simpleCart_shelfItem">
+                <a href="{{ prodect.get_url }}" class="mask"><img class="img-responsive zoom-img"
+                        style="height: 200px; width: 189px;" src="{{prodect.img1.url}}" alt="" /></a>
+                <div class="product-bottom">
+                    <h3>{{prodect.brand}}</h3>
+                    <p>{{prodect.prodectname}}</p>
+                    <p>{{prodect.model_no}}</p>
+                    {% if prodect.offer %}
+                    <h4> <span class=" item_price">₹{{prodect.price}} &nbsp;<del style="color: rgb(255, 0, 0);">{{prodect.actual_price}}</del></span></h4>
+                    <div class="srch">
+                        <span><b>Offer </b>{{prodect.offer}}%</span>
                     </div>
-            {% endfor %}
+                {% else %}
+                    <h4> <span class=" item_price">₹{{prodect.price}}</span></h4>
+                {% endif %}						</div>
+                <!-- <div class="srch">
+                        <span>-50%</span>
+                    </div> -->
+                {% if prodect.stock <= 0 %} 
+                <a class="btn btn-secondary text-red"><b style="color: red;">Out Of stock</b></a>
+                {% else %}
+                <a href="{% url 'add_cart' prodect.id %}" style="width: 87%; margin-bottom: 2%;" class="btn btn-primary text-white"><b>Add to Cart</b></a>
+                <a href="{% url 'buy_now' prodect.id %}" class="btn " style="border-color: red; color: red; border-radius: 5px; width: 87%;"><b>Buy Now</b></a>
+
+                {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endfor %}
         {%else%}
         <div style="display: flex; justify-content: center;">
             <img src="{% static 'user/images/empty_search.png' %}" style="max-width: 50%;" alt="">
