--- a/templats/userst/women.html
+++ b/templats/userst/women.html
@@ -21,7 +21,11 @@
 			<div class="product-one">
 				{% for prodect in prodects %}
 				<div class="col-md-3 product-left p-3" style="margin-top: 3%;">
-					<div class="product-main simpleCart_shelfItem">
+					<div class="product-main">
+						<div style="display: flex; justify-content: end; margin-right: 1%;">
+							<a href="{% url 'add_wish' prodect.id %}"><img src="https://img.icons8.com/material-outlined/24/fa314a/like.png"/></a>
+						</div>
+						<div class="simpleCart_shelfItem">
 						<a href="{{ prodect.get_url }}" class="mask"><img class="img-responsive zoom-img"
 								style="height: 200px; width: 189px;" src="{{prodect.img1.url}}" alt="" /></a>
 						<div class="product-bottom">
@@ -46,6 +50,7 @@
 						<a href="{% url 'buy_now' prodect.id %}" class="btn " style="border-color: red; color: red; border-radius: 5px; width: 87%;"><b>Buy Now</b></a>
 
 						{% endif %}
+						</div>
 					</div>
 				</div>
 				{% endfor %}
